--- a/forentend/src/assets/style/ChatBod.css
+++ b/forentend/src/assets/style/ChatBod.css
@@ -93,7 +93,7 @@
 
 .message.chatbot {
 	justify-content: flex-start;
-	/* Align incoming messages to the left */
+	/* Align incoming   to the left */
 }
 
 /* foot */
